--- a/module_09/08_introduction_to_research.html
+++ b/module_09/08_introduction_to_research.html
@@ -274,7 +274,7 @@
 			  <div class="col-sm-6">
 				<p class="totalresponses">Total Responses: <span class="responsenum"></span></p>
 				<!-- Button trigger modal -->
-				<button type="button" class="btn prime-bg btn-lg" data-toggle="modal" data-target="#PollThree" data-pollcontainer="poll5"> See Results </button>
+				<button type="button" class="btn prime-bg btn-lg" data-toggle="modal" data-target="#PollFive" data-pollcontainer="poll5"> See Results </button>
 			  </div>
 
 			  <div class="col-sm-6">
