add external link icon

--- a/module_07/02_ethos_establishing credibility.html
+++ b/module_07/02_ethos_establishing credibility.html
@@ -186,7 +186,7 @@
               <div class="card-block">
                 <p>Your reader will be more likely to accept your overall message if you can demonstrate that you are a trustworthy source of information. Readers might question the legitimacy of your entire argument if the information you present is not accurate, current, and relevant.</p>
                 <p>The best way to present yourself as a reliable source of information is to use credible sources. We’ll explore credibility of sources in greater detail during Weeks 9 and 10, but for now here are the key factors to consider when determining whether your source is reliable and credible.</p>
-                <p><em>Learn more by clicking each title or use this <a href="02_ethos_establishing credibility_alt.html" target="_blank">printable version</a>.</em></p>
+                <p><em>Learn more by clicking each title or use this <a href="02_ethos_establishing credibility_alt.html" target="_self">printable version <i class="fal fa-external-link text-third" aria-hidden="true"></i></a></em></p>
                     <div class="mb-4" id="background">
                         <div class="box clickable prime-bg" role="button" aria-labelledby="nature" onclick="boxClick($(this))" style="border-radius: 60px 0px 0px;">
                             <span id="nature" class="text centered"><h1 class="text-white">Author</h1></span>
