--- a/module_07/06_logos_or_making_sense.html
+++ b/module_07/06_logos_or_making_sense.html
@@ -88,7 +88,7 @@
               </a></div>
             <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="card-block">
-                <p>Supporting your argument with inductive reasoning is similar to supporting your argument on the basis of a sign. But with inductive reasoning you reach a conclusion after observing multiple and repeated examples or events. For example, an Early Childhood Educator (ECE) might look at research that shows <a href="http://www.edu.gov.on.ca/kindergarten/theresearchisin.html" target="_blank">students enrolled in full-day kindergarten are more prepared for Grade 1 in all areas used to measure early development</a> and conclude that Ontario’s adoption of full-day kindergarten was a wise decision. The research study uses induction to come to the conclusion used by the ECE.</p>
+                <p>Supporting your argument with inductive reasoning is similar to supporting your argument on the basis of a sign. But with inductive reasoning you reach a conclusion after observing multiple and repeated examples or events. For example, an Early Childhood Educator (ECE) might look at research that shows <a href="http://www.edu.gov.on.ca/kindergarten/theresearchisin.html" target="_blank">students enrolled in full-day kindergarten are more prepared for Grade 1 in all areas used to measure early development <i class="fal fa-external-link text-third" aria-hidden="true"></i></a> and conclude that Ontario’s adoption of full-day kindergarten was a wise decision. The research study uses induction to come to the conclusion used by the ECE.</p>
               </div>
             </div>
           </div>
