--- a/module_07/07_bias_arguments.html
+++ b/module_07/07_bias_arguments.html
@@ -48,7 +48,7 @@
 
       <h1>Bias and Arguments</h1>
       <img src="images/bias_arguments.jpg" class="img-fluid rounded z-depth-1 pattern-1 mb-3" alt="">
-      <p>Just as bias can undermine your credibility - <a href="/d2l/common/dialogs/quickLink/quickLink.d2l?ou={orgUnitId}&amp;type=content&amp;rcode=Conestoga-1331184" target="_self">Bias and Credibility</a>, it can also undermine your reasoning or your entire argument. Bias can go beyond personal preference if it causes you to: <ul>
+      <p>Just as bias can undermine your credibility - <a href="/d2l/common/dialogs/quickLink/quickLink.d2l?ou=159769&amp;type=content&amp;rcode=Conestoga-1331184" target="_self">Bias and Credibility</a>, it can also undermine your reasoning or your entire argument. Bias can go beyond personal preference if it causes you to: <ul>
       	<li>overlook important information,</li>
       	<li>pre-judge people and situations unfairly, or</li>
       	<li>intentionally misrepresent the facts of the argument in order to strengthen the argument.</li>
