--- a/module_10/02_reason_for_doing_research.html
+++ b/module_10/02_reason_for_doing_research.html
@@ -55,7 +55,7 @@
        <div class="col-sm-5 float-sm-right">
       <div class="card accent-4 z-depth-1-half p-2 mb-2">
       	<p>“When you perform research, you are essentially trying to solve a mystery.”</p>
-      	<p>For more on the purpose of research, check out <a href="http://open.lib.umn.edu/writingforsuccess/chapter/11-1-the-purpose-of-research-writing/">this chapter in <em>Writing for Success</em></a>.</p>
+      	<p>For more on the purpose of research, check out <a href="http://open.lib.umn.edu/writingforsuccess/chapter/11-1-the-purpose-of-research-writing/">this chapter in <em>Writing for Success</em> <i class="fal fa-external-link text-third" aria-hidden="true"></i></a>.</p>
 		  </div></div>
       <p>You may be able to answer these questions to some degree, but these answers will likely be based on opinions. To answer them fully and factually, you’ll need to conduct research.</p>
       <p>Whether you are a tradesperson, a software engineer, a digital marketer, or a security officer, your job will likely require you to look into something that you do not know the answer to. You may be expected to locate relevant information, analyze your findings, organize the ideas, and then share your results with clients, co-workers, or managers. This desire to answer questions leads us to conduct research in our personal and professional lives, as well as in our academic studies.</p>
