--- a/module_11/05_organize_outline.html
+++ b/module_11/05_organize_outline.html
@@ -58,7 +58,7 @@
   	<h3 class="black-text text-bold">Writer’s tip!</h3>
   	<div class="clearfix"></div>
   	<hr class="black">
-  	<p>If you feel comfortable with Microsoft Word, you can match the APA@Conestoga formatting by <a href="https://support.office.com/en-us/article/Customize-or-create-new-styles-in-Word-D38D6E47-F6FC-48EB-A607-1EB120DEC563?ui=en-US&rs=en-US&ad=US">modifying existing styles</a>.</p>
+  	<p>If you feel comfortable with Microsoft Word, you can match the APA@Conestoga formatting by <a href="https://support.office.com/en-us/article/Customize-or-create-new-styles-in-Word-D38D6E47-F6FC-48EB-A607-1EB120DEC563?ui=en-US&rs=en-US&ad=US">modifying existing styles <i class="fal fa-external-link text-third" aria-hidden="true"></i></a>.</p>
   </div>
   <div class="col-sm-6 mt-4">
   <p>For sections of the same importance, use the same level of heading. By putting information in the appropriate place, you can see when you have gathered enough information to sufficiently explain what you’re trying to say. It also becomes easier for you to ensure that you have presented your ideas logically. If the connections between ideas are unclear, you can rearrange them or add explanations to clarify the relationship between them.</p></div>
