--- a/module_11/08_video_comma.html
+++ b/module_11/08_video_comma.html
@@ -54,7 +54,7 @@
             <div id="ytplayer"></div>
           </div>
         </div>
-              <p class="mt-2">After you have watched the video, you may choose to answer these <a href="https://ed.ted.com/lessons/comma-story-terisa-folaron#review" target="_blank">review questions</a>.</p>
+              <p class="mt-2">After you have watched the video, you may choose to answer these <a href="https://ed.ted.com/lessons/comma-story-terisa-folaron#review" target="_blank">review questions <i class="fal fa-external-link text-third" aria-hidden="true"></i></a>.</p>
               <p>Here are other situations in which you need to use a comma. <br><em>See examples of each by clicking the titles...</em></p>
          <!--/.Accordion wrapper-->
          <div class="accordion" id="accordion" role="tablist" aria-multiselectable="true">
@@ -185,7 +185,7 @@
         </div>
         <!--/.Accordion wrapper-->
         <div class="card card-block z-depth-1-half accent-4 p-3 mt-3">
-                    <p><strong>Optional</strong><br>You may find <a href="http://www.chompchomp.com/hotpotatoes/commas01.htm">these review exercises helpful</a>.</p>
+                    <p><strong>Optional</strong><br>You may find <a href="http://www.chompchomp.com/hotpotatoes/commas01.htm">these review exercises helpful <i class="fal fa-external-link text-third" aria-hidden="true"></i></a>.</p>
               </div>
         <div class="clearfix mt-5"></div>
         <div class="citation mt-5">
