--- a/module_11/09_colons_semi-colons.html
+++ b/module_11/09_colons_semi-colons.html
@@ -65,7 +65,7 @@
         </div>
         </div>
         <h3>Semi-colon</h3>
-        <p>“Semi-colons separate things. Most commonly, they separate two main clauses that are closely related to each other but that could stand on their own as sentences if you wanted them to.” (Mignon Fogarty aka Grammar Girl, Semi-colons, <a href="http://www.quickanddirtytips.com/education/grammar/semicolons" target="_blank">“Use semi-colons to separate things and add variety”)</a></p>
+        <p>“Semi-colons separate things. Most commonly, they separate two main clauses that are closely related to each other but that could stand on their own as sentences if you wanted them to.” (Mignon Fogarty aka Grammar Girl, Semi-colons, <a href="http://www.quickanddirtytips.com/education/grammar/semicolons" target="_blank">“Use semi-colons to separate things and add variety”) <i class="fal fa-external-link text-third" aria-hidden="true"></i></a></p>
         <div class="row">
         <div class="col-sm-10 card prime-bg text-white p-3" style="margin: auto;">
         <ul style="list-style: none;">
