--- a/module_07/08_avoiding_logical_fallacies.html
+++ b/module_07/08_avoiding_logical_fallacies.html
@@ -47,7 +47,7 @@
       <p>Fallacies are often committed unintentionally, the result of careless or hasty thinking. However, it’s also possible for people to present logical fallacies knowingly. They might present their audience with phony logic and hope that the audience will be swayed by something that bears the appearance of logic.</p>
       <p>Why is it important to know the difference between a logical argument and a logical fallacy? On the one hand, you want to create the strongest argument possible to defend your thesis. Creating a fallacy – even unintentionally – makes your argument weaker. On the other hand, you want to identify an argument against your position that seems strong, but, in fact, uses a logical fallacy. Finally, the ability to judge the quality of arguments increases your credibility (ethos).</p>
       <p><em>Learn more about various logical fallacies by reading through the following scenarios.</em></p>
-      <div class="card-block prime-bg text-white p-3 mt-3">
+      <div class="card-block prime-bg text-white p-3 mt-3 ml-4 mr-4">
       <p>You are writing a paper that argues that Canada has well-crafted laws prohibiting hate speech, but greater enforcement is needed in the modern Internet era. You have found a source that claims enforcing the prohibition of hate speech on the internet is wrong because such prohibition is widespread censorship, and it would eliminate Section 2 of the Canadian Charter of Rights and Freedoms, which guarantees such freedoms as thought, belief, opinion and expression.</p>
       <p>Does the source provide a logical argument?</p>
       </div>
@@ -64,14 +64,14 @@
               <div class="well z-depth-1-half p-3 mb-3" id="cs-ex">
                 <p><strong>Answer:</strong> The correct answer is no. The source’s argument is an example of a <em>Strawman Fallacy</em>. The source has oversimplified the concept of enforcing hate speech laws and replaced it with censorship. The argument has been changed to attacking full censorship instead of the original idea.</p>
                 <p>If you choose to address this source in your paper as a different interpretation of the issue, you would want to show how the source has introduced new terms. One way to address this is to emphasize definitions and the key terms under examination.</p>
-                <p>You may enjoy watching this brief explanation of the <a href="https://youtu.be/cGZkCPo7tC0" target="_blank">Strawman Fallacy from PBS Digital Studio’s Idea Channel</a>.</p>
+                <p>You may enjoy watching this brief explanation of the <a href="https://youtu.be/cGZkCPo7tC0" target="_blank">Strawman Fallacy from PBS Digital Studio’s Idea Channel <i class="fal fa-external-link text-third" aria-hidden="true"></i></a>.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
       <!--/.Accordion wrapper-->
-      <div class="card-block prime-bg text-white p-3 mt-3">
+      <div class="card-block prime-bg text-white p-3 mt-3 ml-4 mr-4">
       <p>You are writing a paper that argues eSports should be respected as a legitimate sport equal to major professional sports like hockey and soccer. You have found a source that argues the opposite position. You cite the source in your paper, claiming that the author is simply resentful of this new trend because they are old and probably bad at video games as well.</p>
       <p>Is your argument logical?</p>
       </div>
@@ -87,14 +87,14 @@
             <div class="card-block">
               <div class="well z-depth-1-half p-3 mb-3" id="cs-ex2">
                 <p><strong>Answer:</strong> The correct answer is no. Your argument in response to this source is an example of an <em>Ad hominem</em> fallacy. Instead of criticizing the argument or ideas of the author you cite in your paper, you criticize the author and present that as a legitimate criticism of their argument.</p>
-                <p>If you choose to include this source in your paper, you would want to overlook the personal characteristics of the author and instead challenge the author’s case against eSports. You may enjoy watching this brief explanation of the <a href="https://www.youtube.com/watch?v=IVFK8sVdJNg&index=5&list=PLtHP6qx8VF7dPql3ll1To4i6vEIPt0kV5" target="_blank">Ad Hominem fallacy from PBS Digital Studio’s Idea Channel</a>.</p>
+                <p>If you choose to include this source in your paper, you would want to overlook the personal characteristics of the author and instead challenge the author’s case against eSports. You may enjoy watching this brief explanation of the <a href="https://www.youtube.com/watch?v=IVFK8sVdJNg&index=5&list=PLtHP6qx8VF7dPql3ll1To4i6vEIPt0kV5" target="_blank">Ad Hominem fallacy from PBS Digital Studio’s Idea Channel <i class="fal fa-external-link text-third" aria-hidden="true"></i></a>.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
       <!--/.Accordion wrapper-->
-      <div class="card-block prime-bg text-white p-3 mt-3">
+      <div class="card-block prime-bg text-white p-3 mt-3 ml-4 mr-4">
       <p>You are writing a paper that argues there should be no limits on the amounts that doctors in Ontario can charge for their services. You argue that it’s better to increase government spending on health care than to lose all of our doctors to the United States.</p>
       <p>Is your argument logical? </p>
       </div>
@@ -110,13 +110,13 @@
             <div class="card-block">
               <div class="well z-depth-1-half p-3 mb-3" id="cs-ex3">
                 <p><strong>Answer:</strong> The correct answer is no. Your argument is an example of a <em>Black and White</em> fallacy. By presenting only two choices — either remove all billing restrictions on doctors or lose all of our doctors — you’ve obscured the fact that there are other possible outcomes.</p>
-                <p>You might avoid this fallacy by reading more widely on the subject and proposing a couple of alternative funding models. Consider watching this brief explanation of the <a href="https://www.youtube.com/watch?v=eqz53d-fYL8&index=6&list=PLtHP6qx8VF7dPql3ll1To4i6vEIPt0kV5" target="_blank">Black and White fallacy from PBS Digital Studio’s Idea Channel</a>.</p>
+                <p>You might avoid this fallacy by reading more widely on the subject and proposing a couple of alternative funding models. Consider watching this brief explanation of the <a href="https://www.youtube.com/watch?v=eqz53d-fYL8&index=6&list=PLtHP6qx8VF7dPql3ll1To4i6vEIPt0kV5" target="_blank">Black and White fallacy from PBS Digital Studio’s Idea Channel <i class="fal fa-external-link text-third" aria-hidden="true"></i></a>.</p>
               </div>
             </div>
           </div>
         </div>
       </div><!--Accordion wrapper-->
-      <div class="card-block prime-bg text-white p-3 mt-3">
+      <div class="card-block prime-bg text-white p-3 mt-3 ml-4 mr-4">
       <p>You are writing an advertisement that encourages consumers to buy your brand of body spray. Your commercial suggests that wearing this body spray will make your customers wealthy because recently one customer starting using your product and then shortly afterward they won the lottery.</p>
       <p>Is your reasoning logical? </p></div>
       <div class="arrow-down">
@@ -137,7 +137,7 @@
           </div>
         </div>
       </div><!--Accordion wrapper-->
-      <div class="card-block prime-bg text-white p-3 mt-3">
+      <div class="card-block prime-bg text-white p-3 mt-3 ml-4 mr-4">
       <p>You are writing a case study for your Social Service Worker program. Upon learning that the child involved in the case study benefited from participating in group therapy, you conclude that all children should participate in group therapy.</p>
       <p>Is your argument logical?</p>
       </div>
@@ -159,7 +159,7 @@
         </div>
       </div>
       <!--/.Accordion wrapper-->
-      <div class="card-block prime-bg text-white p-3 mt-3">
+      <div class="card-block prime-bg text-white p-3 mt-3 ml-4 mr-4">
       <p>You are writing a proposal to your renovation clients, in which you recommend that a metal roof is the best choice for their home because it is a superior product.</p>
       <p>Is your reasoning logical?</p>
       </div>
@@ -180,7 +180,7 @@
         </div>
       </div>
       <!--/.Accordion wrapper-->
-      <div class="card-block prime-bg text-white p-3 mt-3">
+      <div class="card-block prime-bg text-white p-3 mt-3 ml-4 mr-4">
       <p>You are writing an argument in favour of a policy that will restrict the use of self-driving cars. To defend your position, you suggest that if we allow automated cars on the road, it will only be a matter of time before machines are in complete control of human civilization.</p>
       <p>Is your argument logical?</p>
       </div>
