add external link icon

--- a/module_07/03_source_citation_and_credibility.html
+++ b/module_07/03_source_citation_and_credibility.html
@@ -79,7 +79,7 @@
                 	<li>The reader is not likely to recognize the name of the source </li>
                 	<li>You want to integrate the quoted material more seamlessly into your own sentence </li>
                 	<li>You have already used the split citation style in a previous sentence, so the reader is aware of the source</li>
-                </ul>Conniff and her publication, Time Magazine, are reliable sources of information according to the checklist in the previous topic page on establishing credibility. But a glance at <a href="http://time.com/author/kelly-conniff/" target="_blank">Conniff’s previous bylines</a> reveals no particular area of specialization. Therefore, in this case, the standard citation style is sufficient and appropriate.</p>
+                </ul>Conniff and her publication, Time Magazine, are reliable sources of information according to the checklist in the previous topic page on establishing credibility. But a glance at <a href="http://time.com/author/kelly-conniff/" target="_blank">Conniff’s previous bylines <i class="fal fa-external-link text-third" aria-hidden="true"></i></a> reveals no particular area of specialization. Therefore, in this case, the standard citation style is sufficient and appropriate.</p>
               </div>
             </div>
           </div>
@@ -100,7 +100,7 @@
                 	<li>You want to draw attention to the credibility of your source, e.g., your reader will recognize and trust them (or their publication) by name </li>
                 	<li>You want to emphasize to your reader that you are drawing on an expert rather than your own experience or opinion</li>
                 	<li>You want to present contrasting opinions from within a community of experts</li>
-                </ul>Highlighting Picard’s name in the split style could help this writer establish credibility with the reader, if the reader is aware of Picard’s reputation as a leading voice in reporting on Canadian health care. Even if the reader was not aware of Picard’s expertise, the explicit reference to him might prompt your reader to search <a href="http://www.theglobeandmail.com/authors/andre-picard" target="_blank">his biography</a> — and, if they did, they would learn about his extensive experience, his awards and recognition, and links related to reporting on public health issues.</p>
+                </ul>Highlighting Picard’s name in the split style could help this writer establish credibility with the reader, if the reader is aware of Picard’s reputation as a leading voice in reporting on Canadian health care. Even if the reader was not aware of Picard’s expertise, the explicit reference to him might prompt your reader to search <a href="http://www.theglobeandmail.com/authors/andre-picard" target="_blank">his biography <i class="fal fa-external-link text-third" aria-hidden="true"></i></a> — and, if they did, they would learn about his extensive experience, his awards and recognition, and links related to reporting on public health issues.</p>
               </div>
             </div>
           </div>
